# annotashot

./: .gitignore  Cargo.toml  README.md  resized_shot
src/: annotate.rs  background.rs  lib.rs  main.rs  screenshot.rs  svg.rs
