[package]
name = "annotate-screenshot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.0", features = ["derive"] }
image = "0.24.8"
once_cell = "1.19.0"
palette = "0.7.4"
resvg = "0.39.0"
